add the file of liantiao

--- a/lihelper_client/conf/alarm.ini
+++ b/lihelper_client/conf/alarm.ini
@@ -1,14 +1,17 @@
 [nginx_alarm]
-switch = off
+mem = 0.8
+mem_switch = on
+cpu = 0.8
+cpu_switch = off
 
 [mysql_alarm]
 switch = off
 
-[mem_alarm]
-switch = off
-value = 0.9
-
-[cpu_alarm]
-switch = 0ff22
-value = 0.9
+[basic]
+disk_switch = off
+mem = 80
+mem_switch = off
+disk = 0.8
+cpu = 90
+cpu_switch = off
 
