--- a/lihelper_server/pom.xml
+++ b/lihelper_server/pom.xml
@@ -7,6 +7,9 @@
   <version>1.0-SNAPSHOT</version>
   <name>lihelper Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>		
+	 <jetty.version>7.6.7.v20120910</jetty.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -155,6 +158,11 @@
 			<groupId>velocity-tools</groupId>
 			<artifactId>velocity-tools</artifactId>
 			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-client</artifactId>
+			<version>${jetty.version}</version>
 		</dependency>
   </dependencies>
   <build>
