--- a/lihelper_server/src/main/webapp/WEB-INF/web.xml
+++ b/lihelper_server/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 	</context-param>
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
-		<param-value>classpath:/log4j.xml</param-value>
+		<param-value>file:${app.config.dir}/log4j.xml</param-value>
 	</context-param>
 	<context-param> 
         <param-name>webAppRootKey</param-name> 
