--- a/lihelper_server/src/main/resources/jdbc.properties
+++ b/lihelper_server/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 db.source.driver=com.mysql.jdbc.Driver
-db.source.url=jdbc:mysql://127.0.0.1/wangys_pro1?useUnicode=true&amp;characterEncoding=utf-8
-db.source.username=wangys
-db.source.password=wangys
+db.source.url=jdbc:mysql://127.0.0.1/lihelper?useUnicode=true&amp;characterEncoding=utf-8
+db.source.username=root
+db.source.password=root
 db.source.min.idle=30
 db.source.max.idle=50
 db.source.max.active=50
