--- a/lihelper_server/src/main/webapp/WEB-INF/web.xml
+++ b/lihelper_server/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@
 
 	<filter-mapping>
 		<filter-name>struts2</filter-name>
-		<url-pattern>*.action</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</filter-mapping>
 
 	<listener>
